add feature and some improves

--- a/src/main/resources/static/css/ring.css
+++ b/src/main/resources/static/css/ring.css
@@ -11,6 +11,7 @@ div.dataTables_filter input{
 
 .logo{
     margin-top: 10px;
+    margin-left: 10px;
     margin-bottom: 10px;
     max-height: 70px;
     max-width: 130px;
