--- a/src/main/resources/templates/base/header.html
+++ b/src/main/resources/templates/base/header.html
@@ -80,7 +80,7 @@
                         <li th:classappend="${#httpServletRequest.getRequestURI().contains('/manual/input') ? 'active':''}"><a th:href="@{/manual/input/list}" title="Manual Input"><span class="sub_icon glyphicon glyphicon-file"></span>Manual Input</a></li>
                         <li th:classappend="${#httpServletRequest.getRequestURI().contains('/search/') ? 'active':''}"><a th:href="@{/search/search}" title="Search"><span class="sub_icon glyphicon glyphicon-search"></span>Search</a></li>
                         <li th:classappend="${#httpServletRequest.getRequestURI().contains('/group/') ? 'active':''}"><a th:href="@{/group/list}" title="Group"><span class="sub_icon glyphicon glyphicon-tag"></span>Group</a></li>
-                        <li th:classappend="${#httpServletRequest.getRequestURI().contains('/log/') ? 'active':''}"><a th:href="@{/log/list}" title="Log"><span class="sub_icon glyphicon glyphicon-sunglasses"></span>Log</a></li>
+                        <!--<li th:classappend="${#httpServletRequest.getRequestURI().contains('/log/') ? 'active':''}"><a th:href="@{/log/list}" title="Log"><span class="sub_icon glyphicon glyphicon-sunglasses"></span>Log</a></li>-->
                         <li th:classappend="${#httpServletRequest.getRequestURI().contains('/user/') ? 'active':''}"><a th:href="@{/user/list}" title="User"><span class="sub_icon glyphicon glyphicon-user"></span>User</a></li>
                         <li th:classappend="${#httpServletRequest.getRequestURI().contains('/configuration/') ? 'active':''}"><a th:href="@{/configuration/edit}" title="Configuration"><span class="sub_icon glyphicon glyphicon-cog"></span>Configuration</a></li>
                     </ul>
