add copyright and home page

--- a/src/main/resources/templates/blueprint/checkupFailure.html
+++ b/src/main/resources/templates/blueprint/checkupFailure.html
@@ -47,7 +47,7 @@
                                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                 <tr>
                                                     <td class="subhead" style="padding: 0 0 0 3px;">
-                                                        HANGER
+                                                        RING
                                                     </td>
                                                 </tr>
                                                 <tr>
