--- a/src/main/resources/templates/user/confirmation.html
+++ b/src/main/resources/templates/user/confirmation.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head lang="en" th:replace="base/header :: head">
-        <title>Hanger</title>
+        <title>Ring</title>
     </head>
     <body>
         <th:block th:include="base/header :: navbar"></th:block>
         <div class="container-fluid main-content">
             <div class="row" style="margin-top:5%">
-                <img th:src="@{/images/recovery.png}" style="display: block;margin-left: auto;margin-right: auto;width: 7.5%" alt="Hanger Restore"></img>
+                <img th:src="@{/images/recovery.png}" style="display: block;margin-left: auto;margin-right: auto;width: 7.5%" alt="Ring Restore"></img>
             </div>
             <div class="row" style="margin-top:20px">
                 <div class="col-xs-6 col-sm-6 col-md-6 col-sm-offset-2 col-md-offset-3">
