--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head lang="en" th:replace="base/header :: head">
-        <title>Hanger</title>
+        <title>Ring</title>
         <!--Icons from http://icons-for-free.com/icon/cyclops_marvel_super_hero_x_-_men_icon_2525036.html-->
         <!--https://icons8.com/icon/set/superhero/all-->
     </head>
