--- a/src/main/resources/templates/configuration/edit.html
+++ b/src/main/resources/templates/configuration/edit.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head lang="en" th:replace="base/header :: head">
-        <title>Hanger</title>
+        <title>Ring</title>
     </head>
     <body>
         <th:block th:include="base/header :: navbar"></th:block>
@@ -24,8 +24,8 @@
                             <label th:text="${configuration.name}"></label>
 
                             <div class="form-group">
-                                <img th:src="@{/images/SUCCESS.png}" th:id="${configuration.parameter} + success" style="width: 30px; display: none" alt="Hanger"></img>
-                                <img th:src="@{/images/FAILURE.png}" th:id="${configuration.parameter} + failure" style="width: 30px; display: none" alt="Hanger"></img>
+                                <img th:src="@{/images/SUCCESS.png}" th:id="${configuration.parameter} + success" style="width: 30px; display: none" alt="Ring"></img>
+                                <img th:src="@{/images/FAILURE.png}" th:id="${configuration.parameter} + failure" style="width: 30px; display: none" alt="Ring"></img>
 
                                 <div class="col-sm-10">
                                     <div th:if="${configuration.type == 'number'}">
