--- a/src/main/resources/templates/monitor/monitor.html
+++ b/src/main/resources/templates/monitor/monitor.html
@@ -5,17 +5,55 @@
     </head>
     <body>
 
+        <th:block th:include="base/header :: navbar"></th:block>
         <div class="container-fluid main-content">
+            
+		<center>
+			<h3>Welcome to Ring</h3>
+			<br />
+                        <pre>
+Ring is a tool to keep track of user generated NoSQL data,
+where you can define a template, upload files and validate uploaded data.
+This way Ring becomes a new source you can integrate with your tools extracting data via API,
+and Ring will take care of providing data in a more fault-tolerant way to your processes.
+                        </pre>
+		</center>
+		<br />
+		<div class="list-group">
 
-            <div>
-                <form method="post" enctype="multipart/form-data" th:action="@{/monitor/uploadFile}">
-                    <table>
-                        <tr><td>File to upload:</td>
-                            <td><input type="file" name="file" style="display:block;" /></td></tr>
-                        <tr><td></td><td><input type="submit" value="Upload" /></td></tr>
-                    </table>
-                </form>
-            </div>
+  			<a class="list-group-item list-group-item-action flex-column align-items-start" th:href="@{/manual/input/list}">
+		    	<div class="d-flex w-100 justify-content-between">
+		      		<h5 class="mb-1">Manual Inputs</h5>
+		    	</div>
+		    	<p class="mb-1">
+					This feature enables the creation of templates that says the pattern
+                                        the user file should follow to upload in the system
+				</p>
+	  		</a>
+	  		<a class="list-group-item list-group-item-action flex-column align-items-start" th:href="@{/group/list}">
+		    	<div class="d-flex w-100 justify-content-between">
+		      		<h5 class="mb-1">Groups</h5>
+	    		</div>
+	    		<p class="mb-1">It is possible to register access groups for users, 
+	    		that defines a set of manual input of the group and what users can
+                        manage that.</p>
+	  		</a>
+	  		<a class="list-group-item list-group-item-action flex-column align-items-start" th:href="@{/user/list}">
+		    	<div class="d-flex w-100 justify-content-between">
+		      		<h5 class="mb-1">Users</h5>
+	    		</div>
+	    		<p class="mb-1">This feature allows the creation of new users 
+	    		to the systems. it is also possible 
+	    		to link specific accesses for this user and / or to link them to groups.</p>
+	  		</a>
+	  		<!--<a class="list-group-item list-group-item-action flex-column align-items-start" th:href="@{/log/list}">
+		    	<div class="d-flex w-100 justify-content-between">
+		      		<h5 class="mb-1">Log</h5>
+	    		</div>
+	    		<p class="mb-1">This feature contains information about commands executed on Ring.</p>
+	  		</a>-->
+		</div>
+            
         </div>
     </body>
 </html>
