--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -3,7 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
     <head lang="en" th:replace="base/header :: head">
-        <title>Hanger</title>
+        <title>Ring</title>
     </head>
     <body>
         <th:block th:include="base/header :: navbar"></th:block>
