--- a/src/main/resources/templates/manualInput/edit.html
+++ b/src/main/resources/templates/manualInput/edit.html
@@ -4,18 +4,18 @@
         <title>Ring</title>
     </head>
     <body>
-        
+
         <th:block th:include="base/header :: navbar"></th:block>
 
         <div class="container-fluid main-content">
-            
+
             <h2>Manual Input</h2>
 
             <form class="form-horizontal" method="post" th:action="@{/manual/input/save}" th:object="${manualInput}">
                 <input type='hidden' th:field='*{id}'/>
-                <input type="hidden" th:field="*{originDivisionGroup}"/>
-                <input type="hidden" th:field="*{divisionGroups}"/>
-                
+                <input type="hidden" th:field="*{originDivisionGroup}" th:if="${groups == null}" />
+                <input type="hidden" th:field="*{divisionGroups}" th:if="${groups == null}"/>
+
                 <div class="row">
                     <div class="col-lg-12">
                         <label>Manual Input Name:</label>
@@ -26,7 +26,28 @@
                         </div>
                     </div>
                 </div>
-                
+
+                <div class="row" th:if="${groups != null}" >
+                    <div class="col-lg-12">
+                        <label>Group:</label>
+                        <div class="form-group">
+                            <div class="col-sm-12" >
+                                <select class="selectpicker form-control" 
+                                        data-live-search="true"
+                                        th:field="*{originDivisionGroup}" 
+                                        required="true">
+
+                                    <option th:each="group : ${groups}" 
+                                            th:value="${group.id}"
+                                            th:text="${group.name}"></option>
+                                </select>
+                                <!--<input type="text" class="form-control" th:field="*{name}" style="text-transform:lowercase" required="true" pattern="[a-z0-9_]*" title="Field name should contain only lower case characters, numbers and underscore! Spaces and special characters are not allowd." /> -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="row">
                     <div class="col-lg-3">
                         <label>Delimiter:</label>
