--- a/src/main/resources/templates/group/view.html
+++ b/src/main/resources/templates/group/view.html
@@ -42,7 +42,7 @@
                         <label>Description:</label>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <textarea class="form-control" th:field="*{description}" disabled="true" style="height:130px;"></textarea>
+                                <textarea class="form-control" th:field="*{description}" disabled="true" rows="3"></textarea>
                             </div>
                         </div>
                     </div>
