--- a/src/main/resources/templates/configuration/edit.html
+++ b/src/main/resources/templates/configuration/edit.html
@@ -8,7 +8,7 @@
         <div class="container-fluid main-content">
             <h3 class="page-title">Configuration</h3>
             <div>
-                <form id="configuration" class="form-horizontal space-top" th:object="${configurationGroup}" th:action="@{/configuration/save}" method="post">
+                <form id="configuration" class="form-horizontal space-top" th:object="${configurationGroup}" th:action="@{/settings/save}" method="post">
                     <div class="form-group">
                         <!--Validation-->
                         <div class="col-sm-10">
@@ -113,7 +113,7 @@
                 var value = $(this).val();
                 var id = $(this).attr("id");
                 var name = $(this).attr("name");
-                var url = /*[[@{/configuration/save/}]]*/ "/configuration/save/";
+                var url = /*[[@{/settings/save/}]]*/ "/settings/save/";
 
                 if (this.checkValidity()) {
                     $.ajax({
