--- a/src/main/resources/templates/group/edit.html
+++ b/src/main/resources/templates/group/edit.html
@@ -38,7 +38,7 @@
                         <label>Description:</label>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <textarea class="form-control" th:field="*{description}" required="true" style="height:130px;" ></textarea>
+                                <textarea class="form-control" th:field="*{description}" required="true" rows="3" ></textarea>
                             </div>
                         </div>
                     </div>
