--- a/src/main/resources/templates/manualInput/edit.html
+++ b/src/main/resources/templates/manualInput/edit.html
@@ -13,7 +13,6 @@
 
             <form class="form-horizontal" method="post" th:action="@{/manual/input/save}" th:object="${manualInput}">
                 <input type='hidden' th:field='*{id}'/>
-                <input type="hidden" th:field="*{originDivisionGroup}" th:if="${groups == null}" />
                 <input type="hidden" th:field="*{divisionGroups}" th:if="${groups == null}"/>
 
                 <div class="row">
@@ -21,27 +20,51 @@
                         <label>Manual Input Name:</label>
                         <div class="form-group">
                             <div class="col-sm-12" >
-                                <input type="text" class="form-control" th:field="*{name}" style="text-transform:lowercase" required="true" pattern="[a-z0-9_]*" title="Field name should contain only lower case characters, numbers and underscore! Spaces and special characters are not allowd." />
+                                <input type="text" class="form-control" th:if="${manualInput.name == null}" th:field="*{name}" style="text-transform:lowercase" required="true" pattern="[a-z0-9_]*" title="Field name should contain only lower case characters, numbers and underscore! Spaces and special characters are not allowd." />
+                                <input type="text" class="form-control" th:if="${manualInput.name != null}" readonly="true" th:field="*{name}" style="text-transform:lowercase" required="true" pattern="[a-z0-9_]*"  />
                             </div>
                         </div>
                     </div>
                 </div>
 
-                <div class="row" th:if="${groups != null}" >
+                <div class="row" >
                     <div class="col-lg-12">
                         <label>Group:</label>
                         <div class="form-group">
                             <div class="col-sm-12" >
                                 <select class="selectpicker form-control" 
                                         data-live-search="true"
+                                        th:if="${groups != null}"
                                         th:field="*{originDivisionGroup}" 
                                         required="true">
 
-                                    <option th:each="group : ${groups}" 
+                                    <option th:each="group : ${groups}"
                                             th:value="${group.id}"
                                             th:text="${group.name}"></option>
                                 </select>
-                                <!--<input type="text" class="form-control" th:field="*{name}" style="text-transform:lowercase" required="true" pattern="[a-z0-9_]*" title="Field name should contain only lower case characters, numbers and underscore! Spaces and special characters are not allowd." /> -->
+                                <input type="text" th:value="*{originDivisionGroup.name}" th:if="${groups == null}" class="form-control" readonly="true" />
+                                <input type="hidden" th:field="*{originDivisionGroup}" th:if="${groups == null}" class="form-control" />
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="form-check">
+                            <input type="checkbox" id="alterable" name="alterable" th:field="*{alterable}" th:checked="*{alterable}" th:attr="disabled=${#authorization.expression('hasRole(''LORD'')') == false && manualInput.alterable == false}" />
+                            <label class="checkbox-label" for="alterable">Can be modified (add field, change data type or recreate)</label>
+                        </div>
+                    </div>
+                </div>
+                <br/>
+
+                <div class="row">
+                    <div class="col-lg-12">
+                        <label>Description:</label>
+                        <div class="form-group">
+                            <div class="col-sm-12" >
+                                <textarea class="form-control" rows="3" th:field="*{description}" required="true" title="Describe the purpose of this Manual Input" ></textarea>
                             </div>
                         </div>
                     </div>
