--- a/src/main/resources/templates/group/edit.html
+++ b/src/main/resources/templates/group/edit.html
@@ -27,7 +27,7 @@
                         <label>Group Name:</label>
                         <div class="form-group">
                             <div class="col-sm-12" >
-                                <input type="text" class="form-control" th:field="*{name}" required="true" onkeyup="this.value = this.value.toUpperCase();" />
+                                <input type="text" class="form-control" th:field="*{name}" required="true" />
                             </div>
                         </div>
                     </div>
