--- a/src/main/resources/templates/manualInput/edit.html
+++ b/src/main/resources/templates/manualInput/edit.html
@@ -147,7 +147,7 @@
                         <label>Range:</label>
                         <div class="form-group">
                             <div class="col-sm-12">
-                                <input type="text" class="form-control" th:field="*{spreadsheetRange}" required="true" />
+                                <input type="text" class="form-control" th:field="*{spreadsheetRange}" />
                             </div>
                         </div>
                     </div>
