--- a/src/main/resources/templates/manualInput/list.html
+++ b/src/main/resources/templates/manualInput/list.html
@@ -18,7 +18,7 @@
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="black-link" th:href="@{'/manual/input/create?type=CSV'}">For CSV File</a></li>
-                                <li><a class="black-link" th:href="@{'/manual/input/create?type=XLSX'}">For XLSX File</a></li>
+                                <!--<li><a class="black-link" th:href="@{'/manual/input/create?type=XLSX'}">For XLSX File</a></li> -->
                                 <li><a class="black-link" th:href="@{'/manual/input/create?type=GSHEETS'}">For Google Sheets</a></li>
                             </ul>
                         </div>
